--- a/user-guide.html
+++ b/user-guide.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar-industrial">
         <div class="navbar-brand">
-             <h1><a href="index.html">Spin The Wheel</a></h1>
+             <h1><a href="https://spinwheelonline.org/">Spin The Wheel</a></h1>
         </div>
         <button class="navbar-toggler" aria-label="Toggle navigation" aria-expanded="false" aria-controls="navbarIndustrialNav">
             <span class="toggler-icon"></span>
@@ -23,8 +23,8 @@
         <div class="navbar-collapse" id="navbarIndustrialNav">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="./" class="nav-link">NEW</a></li>
-                <li class="nav-item"><a href="index.html#new-section" class="nav-link">Use Case</a></li>
-                <li class="nav-item"><a href="index.html#faq-section" class="nav-link">FAQ</a></li>
+                <li class="nav-item"><a href="https://spinwheelonline.org/#new-section" class="nav-link">Use Case</a></li>
+                <li class="nav-item"><a href="https://spinwheelonline.org/#faq-section" class="nav-link">FAQ</a></li>
                 <li class="nav-item"><a href="user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
                  <li class="nav-item"><a href="about-us.html" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="contact-us.html" class="nav-link">Contact</a></li>
