--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/css/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
     <link rel="canonical" href="">
 </head>
 <body>
     <nav class="navbar-industrial">
         <div class="navbar-brand">
-             <h1><a href="https://spinwheelonline.org/">Spin The Wheel</a></h1>
+             <h1><a href="index.html">Spin The Wheel</a></h1>
         </div>
         <button class="navbar-toggler" aria-label="Toggle navigation" aria-expanded="false" aria-controls="navbarIndustrialNav">
             <span class="toggler-icon"></span>
@@ -22,12 +22,12 @@
         </button>
         <div class="navbar-collapse" id="navbarIndustrialNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="./" class="nav-link">NEW</a></li>
-                <li class="nav-item"><a href="https://spinwheelonline.org/#new-section" class="nav-link">Use Case</a></li>
-                <li class="nav-item"><a href="https://spinwheelonline.org/#faq-section" class="nav-link">FAQ</a></li>
-                <li class="nav-item"><a href="user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
-                 <li class="nav-item"><a href="about-us.html" class="nav-link">about</a></li>
-                <li class="nav-item"><a href="contact-us.html" class="nav-link">contact</a></li>
+                <li class="nav-item"><a href="/" class="nav-link">NEW</a></li>
+                <li class="nav-item"><a href="/#new-section" class="nav-link">Use Case</a></li>
+                <li class="nav-item"><a href="/#faq-section" class="nav-link">FAQ</a></li>
+                <li class="nav-item"><a href="/user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
+                 <li class="nav-item"><a href="/about-us.html" class="nav-link">about</a></li>
+                <li class="nav-item"><a href="/contact-us.html" class="nav-link">contact</a></li>
             </ul>
         </div>
     </nav>
@@ -83,6 +83,6 @@
 <footer>
     <p>© 2025 Spin The Wheel. All Rights Reserved.</p>
 </footer>
-    <script src="static/js/userguide.js"></script>
+    <script src="/static/js/userguide.js"></script>
 </body>
 </html>
